src/llvm/wrapper/core/type.nim


# proc isLiteralStruct*(structTy: TypeRef): Bool {.cdecl, importc: "LLVMIsLiteralStruct", dynlib: LLVMlib.}
#     ##  Determine whether a structure is literal.
#     ##
#     ##  @see llvm::StructType::isLiteral()


# ##  Sequential types represents "arrays" of types. This is a super class
# ##  for array, vector, and pointer types.
# proc getElementType*(ty: TypeRef): TypeRef {.cdecl, importc: "LLVMGetElementType", dynlib: LLVMlib.}
#     ##  Obtain the type of elements within a sequential type.
#     ##
#     ##  This works on array, vector, and pointer types.
#     ##
#     ##  @see llvm::SequentialType::getElementType()

# proc getSubtypes*(tp: TypeRef; arr: ptr TypeRef) {.cdecl, importc: "LLVMGetSubtypes", dynlib: LLVMlib.}
#     ##  Returns type's subtypes
#     ##
#     ##  @see llvm::Type::subtypes()

# proc getNumContainedTypes*(tp: TypeRef): cuint {.cdecl, importc: "LLVMGetNumContainedTypes", dynlib: LLVMlib.}
#     ##   Return the number of types in the derived type.
#     ##
#     ##  @see llvm::Type::getNumContainedTypes()

# proc arrayType*(elementType: TypeRef; elementCount: cuint): TypeRef {.cdecl, importc: "LLVMArrayType", dynlib: LLVMlib.}
#     ##  Create a fixed size array type that refers to a specific type.
#     ##
#     ##  The created type will exist in the context that its element type
#     ##  exists in.
#     ##
#     ##  @see llvm::ArrayType::get()

# proc getArrayLength*(arrayTy: TypeRef): cuint {.cdecl, importc: "LLVMGetArrayLength", dynlib: LLVMlib.}
#     ##  Obtain the length of an array type.
#     ##
#     ##  This only works on types that represent arrays.
#     ##
#     ##  @see llvm::ArrayType::getNumElements()

# proc pointerType*(elementType: TypeRef; addressSpace: cuint): TypeRef {.cdecl, importc: "LLVMPointerType", dynlib: LLVMlib.}
#     ##  Create a pointer type that points to a defined type.
#     ##
#     ##  The created type will exist in the context that its pointee type
#     ##  exists in.
#     ##
#     ##  @see llvm::PointerType::get()

# proc getPointerAddressSpace*(pointerTy: TypeRef): cuint {.cdecl, importc: "LLVMGetPointerAddressSpace", dynlib: LLVMlib.}
#     ##  Obtain the address space of a pointer type.
#     ##
#     ##  This only works on types that represent pointers.
#     ##
#     ##  @see llvm::PointerType::getAddressSpace()

# proc vectorType*(elementType: TypeRef; elementCount: cuint): TypeRef {.cdecl, importc: "LLVMVectorType", dynlib: LLVMlib.}
#     ##  Create a vector type that contains a defined type and has a specific
#     ##  number of elements.
#     ##
#     ##  The created type will exist in the context thats its element type
#     ##  exists in.
#     ##
#     ##  @see llvm::VectorType::get()

# proc getVectorSize*(vectorTy: TypeRef): cuint {.cdecl, importc: "LLVMGetVectorSize", dynlib: LLVMlib.}
#     ##  Obtain the number of elements in a vector type.
#     ##
#     ##  This only works on types that represent vectors.
#     ##
#     ##  @see llvm::VectorType::getNumElements()

# proc voidTypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMVoidTypeInContext", dynlib: LLVMlib.}
#     ##  Create a void type in a context.

# proc labelTypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMLabelTypeInContext", dynlib: LLVMlib.}
#     ##  Create a label type in a context.

# proc x86MMXTypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMX86MMXTypeInContext", dynlib: LLVMlib.}
#     ##  Create a X86 MMX type in a context.

# proc tokenTypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMTokenTypeInContext", dynlib: LLVMlib.}
#     ##  Create a token type in a context.

# proc metadataTypeInContext*(c: ContextRef): TypeRef {.cdecl, importc: "LLVMMetadataTypeInContext", dynlib: LLVMlib.}
#     ##  Create a metadata type in a context.

# ##  These are similar to the above functions except they operate on the
# ##  global context.

proc voidType*(): Type =
    ##  Create a void type in the global context.
    ## 
    ##  Wrapping:
    ##  * `voidType()<../llvm/Core.html#voidType>`_
    runnableExamples:
        var
            llVoid = voidType()

        assert $llVoid == "void"
    newType(raw.voidType())

# proc labelType*(): TypeRef {.cdecl, importc: "LLVMLabelType", dynlib: LLVMlib.}
# proc x86MMXType*(): TypeRef {.cdecl, importc: "LLVMX86MMXType", dynlib: LLVMlib.}

proc intType*(nbits: uint): Type =
    ##  Obtain an integer type from the global context with a specified bit
    ##  width.
    ## 
    ##  Wrapping:
    ##  * `intType(cuint)<../llvm/Core.html#intType,cuint>`_
    runnableExamples:
        var
            llInt = intType(113)

        assert $llInt == "i113"
    newType(intType(cuint nbits))